style: vertically align the twemoji SVG in the middle of the button, fix duplication of max-height

--- a/src/Emoji.scss
+++ b/src/Emoji.scss
@@ -15,7 +15,8 @@ $width: 3rem;
 
 	&-img {
 		max-height: $height;
-		max-height: $width;
+		max-width: $width;
+		vertical-align: middle;
 	}
 
 	&:hover {
